--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -7,10 +7,376 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Макет 1.6 Юлия Шатуло</title>
   </head>
-  <body>
-    <img src="./img/webpack.svg" alt="Webpack Logo" width="200px" />
-    <h3>Welcome to Webpack 4 starter </h3>
+  <body class="page">
+    <div class="burger-menu burger-menu--hidden">
+      <header class="header-burger">
+        <div class="header-burger">
+          <button class="button button-close" type="button">
+            <img
+              class="button-close__img"
+              src="./img/close.svg"
+              alt="Закрыть"
+            />
+          </button>
+          <img
+            class="header__logo--burger"
+            src="./img/logo.svg"
+            alt="Логотип"
+          />
+          <button class="button button-search" type="button">
+            <img class="search__img" src="./img/search.svg" alt="Поиск" />
+          </button>
+        </div>
+      </header>
+      <div class="nav-buger">
+        <ul class="nav-buger nav-list">
+          <li class="nav-list__item"
+            ><a class="link link--item" href="#">Ремонт техники</a></li
+          >
+          <li class="nav-list__item"
+            ><a class="link link--item" href="#">Услуги и сервисы</a></li
+          >
+          <li class="nav-list__item"
+            ><a class="link link--item" href="#">Корпоративным клиентам</a></li
+          >
+          <li class="nav-list__item"
+            ><a class="link link--item" href="#">Продавцам техники</a></li
+          >
+          <li class="nav-list__item"
+            ><a class="link link--item" href="#">Партнерам</a></li
+          >
+          <li class="nav-list__item"
+            ><a class="link link--item" href="#">Производителям</a></li
+          >
+          <li class="nav-list__item"
+            ><a class="link link--item" href="#">Наши сервисные центры</a></li
+          >
+          <li class="nav-list__item"
+            ><a class="link link--item" href="#">Контакты</a></li
+          >
+        </ul>
+      </div>
+      <footer class="footer">
+        <div class="buttons-footer">
+          <button class="button button-call" type="button">
+            <img
+              class="button-call__img"
+              src="./img/call.svg"
+              alt="Позвонить"
+            />
+          </button>
+          <button class="button button-chat" type="button">
+            <img class="button-chat__img" src="./img/chat.svg" alt="Чат" />
+          </button>
+          <button class="button button-profile" type="button">
+            <img
+              class="button-profile__img"
+              src="./img/profile.svg"
+              alt="Профиль"
+            />
+          </button>
+        </div>
+        <div class="contacts">
+          <a class="link contacts__mail" href="mailto:mail@cps.com"
+            >mail@cps.com</a
+          >
+        </div>
+        <div class="contacts">
+          <a class="link contacts__telephone" href="tel:+78008908900"
+            >8 800 890 8900</a
+          >
+        </div>
+        <div class="language-change">
+          <a
+            class="link link--item language-change__ru language-change__ru--active"
+            href="#"
+            >RU</a
+          >
+          <a class="link link--item language-change__en" href="#">EN</a>
+          <a class="link link--item language-change__ch" href="#">CH</a>
+        </div>
+      </footer>
+    </div>
+
+    <div class="container-page">
+      <header class="header">
+        <div class="header header__menu-logo">
+          <button class="button burger-menu">
+            <img class="burger-menu__img" src="./img/menu-burger.svg" />
+          </button>
+          <img
+            class="header__divider header__divider--menu-logo"
+            src="./img/divider.svg"
+          />
+          <img class="header__logo" src="./img/logo.svg" />
+        </div>
+        <div class="header header__interaction">
+          <button class="button call">
+            <img class="call__img" src="./img/call.svg" />
+          </button>
+          <button class="button chat">
+            <img class="chat__img" src="./img/chat.svg" />
+          </button>
+          <button class="button profile">
+            <img class="profile__img" src="./img/profile.svg" />
+          </button>
+          <img class="header__divider" src="./img/divider.svg" />
+          <button class="button repair">
+            <img class="repair__img" src="./img/repair.svg" />
+          </button>
+          <button class="button checkstatus">
+            <img class="checkstatus__img" src="./img/checkstatus.svg" />
+          </button>
+        </div>
+      </header>
+
+      <main class="main">
+        <section class="services">
+          <div class="title">
+            <img class="title__highlight" src="./img/highlight.svg" />
+            <h1 class="title__h1">Услуги и сервисы</h1>
+            <div class="button-title-desktop">
+              <label class="button-title-desktop__label">
+                Оставить заявку
+                <button class="button repair">
+                  <img class="repair__img" src="./img/repair.svg" />
+                </button>
+              </label>
+              <label class="button-title-desktop__label">
+                Статус ремонта
+                <button class="button checkstatus">
+                  <img class="checkstatus__img" src="./img/checkstatus.svg" />
+                </button>
+              </label>
+            </div>
+          </div>
+          <nav class="slide-menu">
+            <a
+              class="slide-menu__item slide-menu__item--active slide-menu__item--brands"
+              href="#"
+              >Ремонтируемые бренды</a
+            >
+            <a class="slide-menu__item slide-menu__item--devices" href="#"
+              >Ремонтируемые устройства</a
+            >
+            <a class="slide-menu__item slide-menu__item--prices" href="#"
+              >Цены на услуги</a
+            >
+            <a class="slide-menu__item slide-menu__item--addresses" href="#"
+              >Адреса сервисных центров</a
+            >
+            <a
+              class="slide-menu__item slide-menu__item--special-prices"
+              href="#"
+              >Специальные цены</a
+            >
+            <a class="slide-menu__item slide-menu__item--reviews" href="#"
+              >Отзывы</a
+            >
+          </nav>
+          <div class="text-image">
+            <div class="text-image__text">
+              <p class="text text__brands"
+                >Мы являемся авторизованным сервисным центром по ремонту техники
+                Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с
+                официальной гарантией производителя.</p
+              >
+              <p class="text text-tablet text__brands"
+                >Мы успешно работаем с 1992 года и заслужили репутацию надежного
+                партнера</p
+              >
+              <p class="text text-pc text__brands"
+                >Мы успешно работаем с 1992 года и заслужили репутацию надежного
+                партнера, что подтверждает большое количество постоянных
+                клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям
+                и, в свою очередь, советуют нас родным и близким.</p
+              >
+              <div class="read-more">
+                <img class="read-more__icon" src="./img/icon-read-more.svg" />
+                <button class="button read-more__button"> Читать далее </button>
+              </div>
+            </div>
+            <div class="text-image__image">
+              <img
+                class="image__main"
+                src="./img/image-main.jpg"
+                alt="Фото вывески сервисного центра"
+              />
+            </div>
+          </div>
+        </section>
+      </main>
+
+      <article class="repair-brands">
+        <h2 class="repair-brands__title">Ремонт техники различных брендов</h2>
+        <div class="swiper brand-catalog" data-mobile="false">
+          <div
+            class="brand-catalog__list brand-catalog__list--hidden swiper-wrapper"
+          >
+            <div class="brand-card brand-card--lenovo swiper-slide">
+              <img
+                class="brand-card__logo"
+                src="./img/logo-lenovo.svg"
+                alt="Lenovo"
+              />
+              <button class="brand-card__button button-go button">
+                <img
+                  class="button-go__icon"
+                  src="./img/button-go.svg"
+                  alt="Перейти"
+                />
+              </button>
+            </div>
+            <div class="brand-card brand-card--samsung swiper-slide">
+              <img
+                class="brand-card__logo"
+                src="./img/logo-samsung.svg"
+                alt="Samsung"
+              />
+              <button class="brand-card__button button-go button">
+                <img
+                  class="button-go__icon"
+                  src="./img/button-go.svg"
+                  alt="Перейти"
+                />
+              </button>
+            </div>
+            <div class="brand-card brand-card--apple swiper-slide">
+              <img
+                class="brand-card__logo"
+                src="./img/logo-apple.svg"
+                alt="Apple"
+              />
+              <button class="brand-card__button button-go button">
+                <img
+                  class="button-go__icon"
+                  src="./img/button-go.svg"
+                  alt="Перейти"
+                />
+              </button>
+            </div>
+            <div class="brand-card brand-card--viewsonic swiper-slide">
+              <img
+                class="brand-card__logo"
+                src="./img/logo-viewsonic.svg"
+                alt="ViewSonic"
+              />
+              <button class="brand-card__button button-go button">
+                <img
+                  class="button-go__icon"
+                  src="./img/button-go.svg"
+                  alt="Перейти"
+                />
+              </button>
+            </div>
+            <div class="brand-card brand-card--bosch swiper-slide">
+              <img
+                class="brand-card__logo"
+                src="./img/logo-bosch.svg"
+                alt="Bosch"
+              />
+              <button class="brand-card__button button-go button">
+                <img
+                  class="button-go__icon"
+                  src="./img/button-go.svg"
+                  alt="Перейти"
+                />
+              </button>
+            </div>
+            <div class="brand-card brand-card--hp swiper-slide">
+              <img
+                class="brand-card__logo brand-card__logo--hp"
+                src="./img/logo-hp.svg"
+                alt="HP"
+              />
+              <button class="brand-card__button button-go button">
+                <img
+                  class="button-go__icon"
+                  src="./img/button-go.svg"
+                  alt="Перейти"
+                />
+              </button>
+            </div>
+            <div class="brand-card brand-card--acer swiper-slide">
+              <img
+                class="brand-card__logo"
+                src="./img/logo-acer.svg"
+                alt="Acer"
+              />
+              <button class="brand-card__button button-go button">
+                <img
+                  class="button-go__icon"
+                  src="./img/button-go.svg"
+                  alt="Перейти"
+                />
+              </button>
+            </div>
+            <div class="brand-card brand-card--sony swiper-slide">
+              <img
+                class="brand-card__logo"
+                src="./img/logo-sony.svg"
+                alt="Sony"
+              />
+              <button class="brand-card__button button-go button">
+                <img
+                  class="button-go__icon"
+                  src="./img/button-go.svg"
+                  alt="Перейти"
+                />
+              </button>
+            </div>
+            <div class="brand-card brand-card--msi swiper-slide">
+              <img
+                class="brand-card__logo"
+                src="./img/logo-msi.svg"
+                alt="MSI"
+              />
+              <button class="brand-card__button button-go button">
+                <img
+                  class="button-go__icon"
+                  src="./img/button-go.svg"
+                  alt="Перейти"
+                />
+              </button>
+            </div>
+            <div class="brand-card brand-card--sharp swiper-slide">
+              <img
+                class="brand-card__logo"
+                src="./img/logo-sharp.svg"
+                alt="Sharp"
+              />
+              <button class="brand-card__button button-go button">
+                <img
+                  class="button-go__icon"
+                  src="./img/button-go.svg"
+                  alt="Перейти"
+                />
+              </button>
+            </div>
+            <div class="brand-card brand-card--ledrand swiper-slide">
+              <img
+                class="brand-card__logo"
+                src="./img/logo-legrand.svg"
+                alt="Legrand"
+              />
+              <button class="brand-card__button button-go button">
+                <img
+                  class="button-go__icon"
+                  src="./img/button-go.svg"
+                  alt="Перейти"
+                />
+              </button>
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+        <div class="show-all">
+          <img class="show-all__icon" src="./img/icon-read-more.svg" />
+          <button class="show-all__button button"> Показать все </button>
+        </div>
+      </article>
+    </div>
   </body>
 </html>
