--- a/src/index.html
+++ b/src/index.html
@@ -474,9 +474,77 @@
       </article>
       <article class="service-prices">
         <h2 class="service-prices__title">Ремонт различных видов техники</h2>
-        <div class="swiper prices" data-mobile="false">
-          <div class="price__list type-catalog__list--hidden swiper-wrapper">
-            
+        <div class="swiper-prices swiper" data-mobile="false">
+          <div class="price__list swiper-wrapper">
+            <div class="string-wrapper string-title">
+              <div class="string-wrapper__column">Ремонтные услуги</div>
+              <div class="string-wrapper__column">Цена</div>
+              <div class="string-wrapper__column">Срок</div>
+            </div>
+            <div class="string-content">
+              <div class="string-wrapper">
+                <div class="string-wrapper__column">Диагностика</div>
+                <div class="string-wrapper__column">Бесплатно</div>
+                <div class="string-wrapper__column">30 мин</div>
+                <div class="string-wrapper__column">
+                  <img
+                    class="button button-to-order"
+                    src="../src/img/button-to-order.svg"
+                    alt="Заказать"
+                  />
+                </div>
+              </div>
+              <div class="string-wrapper">
+                <div class="string-wrapper__column">Замена дисплея</div>
+                <div class="string-wrapper__column">1 000 ₽</div>
+                <div class="string-wrapper__column">30-120 мин</div>
+                <div class="string-wrapper__column"
+                  ><img
+                    class="button button-to-order"
+                    src="../src/img/button-to-order.svg"
+                    alt="Заказать"
+                /></div>
+              </div>
+              <div class="string-wrapper">
+                <div class="string-wrapper__column"
+                  >Замена полифонического динамика</div
+                >
+                <div class="string-wrapper__column">1 000 ₽</div>
+                <div class="string-wrapper__column">30-120 мин</div>
+                <div class="string-wrapper__column"
+                  ><img
+                    class="button button-to-order"
+                    src="../src/img/button-to-order.svg"
+                    alt="Заказать"
+                /></div>
+              </div>
+              <div class="string-wrapper">
+                <div class="string-wrapper__column"
+                  >Тестирование с выдачей технического заключения</div
+                >
+                <div class="string-wrapper__column">1 000 ₽</div>
+                <div class="string-wrapper__column">30-120 мин</div>
+                <div class="string-wrapper__column"
+                  ><img
+                    class="button button-to-order"
+                    src="../src/img/button-to-order.svg"
+                    alt="Заказать"
+                /></div>
+              </div>
+              <div class="string-wrapper">
+                <div class="string-wrapper__column"
+                  >Замена программного обеспечения</div
+                >
+                <div class="string-wrapper__column">1 000 ₽</div>
+                <div class="string-wrapper__column">30-120 мин</div>
+                <div class="string-wrapper__column"
+                  ><img
+                    class="button button-to-order"
+                    src="../src/img/button-to-order.svg"
+                    alt="Заказать"
+                /></div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="swiper-pagination"></div>
