--- a/src/index.html
+++ b/src/index.html
@@ -182,7 +182,7 @@
                 Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с
                 официальной гарантией производителя.
               </p>
-              <p class="text text-tablet text__brands ">
+              <p class="text text-tablet text__brands">
                 Мы успешно работаем с 1992 года и заслужили репутацию надежного
                 партнера
               </p>
@@ -198,10 +198,15 @@
                 клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям
                 и, в свою очередь, советуют нас родным и близким.
               </p>
-              
+
               <div class="show-all">
-                <img class="show-all__icon show-all__icon--text" src="./img/icon-read-more.svg" />
-                <button class="show-all__button show-all__button--text button"> Читать далее </button>
+                <img
+                  class="show-all__icon show-all__icon--text"
+                  src="./img/icon-read-more.svg"
+                />
+                <button class="show-all__button show-all__button--text button">
+                  Читать далее
+                </button>
               </div>
             </div>
             <div class="text-image__image">
@@ -379,7 +384,10 @@
           <div class="swiper-pagination"></div>
         </div>
         <div class="show-all">
-          <img class="show-all__icon show-all__icon--brands" src="./img/icon-read-more.svg" />
+          <img
+            class="show-all__icon show-all__icon--brands"
+            src="./img/icon-read-more.svg"
+          />
           <button class="show-all__button button show-all__button--brands">
             Показать все
           </button>
@@ -475,100 +483,230 @@
         </div>
         <div class="swiper-pagination"></div>
         <div class="show-all">
-          <img class="show-all__icon show-all__icon--type" src="./img/icon-read-more.svg" />
-          <button class="show-all__button show-all__button--type button"> Показать все </button>
+          <img
+            class="show-all__icon show-all__icon--type"
+            src="./img/icon-read-more.svg"
+          />
+          <button class="show-all__button show-all__button--type button">
+            Показать все
+          </button>
         </div>
       </article>
       <article class="service-prices">
         <h2 class="service-prices__title">Цены на услуги</h2>
         <div class="swiper-prices swiper" data-mobile="false">
-          <div class="price__list swiper-wrapper">
-            <div class="string-wrapper string-title">
-              <div class="string-wrapper__column">Ремонтные услуги</div>
-              <div class="string-wrapper__column">Цена</div>
-              <div class="string-wrapper__column">Срок</div>
+          <div class="prices-mobile swiper-wrapper">
+
+            <div class="prices-card">
+              <div class="prices-card__string">
+                Ремонтные услуги <br>
+                Диагностика
+              </div>
+              <div class="prices-card__string">
+                Цена <br>
+                Бесплатно
+              </div>
+              <div class="prices-card__string--wrapper">
+                  <div class="prices-card__string">
+                    Срок <br>
+                    30 мин
+                  </div>
+                <img
+                  class="button button-to-order--mobile"
+                  src="../src/img/button-to-order.svg"
+                  alt="Заказать"
+                />
+              </div>
             </div>
-            <div class="string-content">
-              <div class="string-wrapper">
-                <div class="string-wrapper__column">Диагностика</div>
-                <div class="string-wrapper__column">Бесплатно</div>
-                <div class="string-wrapper__column">30 мин</div>
-                <div class="string-wrapper__column string-wrapper__column--button">
-                  <img
-                    class="button button-to-order"
-                    src="../src/img/button-to-order.svg"
-                    alt="Заказать"
-                  />
-                </div>
+
+            <div class="prices-card">
+              <div class="prices-card__string">
+                Ремонтные услуги <br>
+                Замена дисплея
               </div>
-              <div class="string-wrapper">
-                <div class="string-wrapper__column">Замена дисплея</div>
-                <div class="string-wrapper__column">1 000 ₽</div>
-                <div class="string-wrapper__column">30-120 мин</div>
-                <div class="string-wrapper__column string-wrapper__column--button"
-                  ><img
-                    class="button button-to-order"
-                    src="../src/img/button-to-order.svg"
-                    alt="Заказать"
-                /></div>
+              <div class="prices-card__string">
+                Цена <br>
+                1 000 ₽
               </div>
-              <div class="string-wrapper">
-                <div class="string-wrapper__column"
-                  >Замена полифонического динамика</div
-                >
-                <div class="string-wrapper__column">1 000 ₽</div>
-                <div class="string-wrapper__column">30-120 мин</div>
-                <div class="string-wrapper__column string-wrapper__column--button"
-                  ><img
-                    class="button button-to-order"
-                    src="../src/img/button-to-order.svg"
-                    alt="Заказать"
-                /></div>
+              <div class="prices-card__string--wrapper">
+                  <div class="prices-card__string">
+                    Срок <br>
+                    30-120 мин
+                  </div>
+                <img
+                  class="button button-to-order--mobile"
+                  src="../src/img/button-to-order.svg"
+                  alt="Заказать"
+                />
               </div>
-              <div class="string-wrapper">
-                <div class="string-wrapper__column"
-                  >Тестирование с выдачей технического заключения</div
-                >
-                <div class="string-wrapper__column">1 000 ₽</div>
-                <div class="string-wrapper__column">30-120 мин</div>
-                <div class="string-wrapper__column string-wrapper__column--button"
-                  ><img
-                    class="button button-to-order"
-                    src="../src/img/button-to-order.svg"
-                    alt="Заказать"
-                /></div>
+            </div>
+
+            <div class="prices-card">
+              <div class="prices-card__string">
+                Ремонтные услуги <br>
+                Замена полифонического динамика
               </div>
-              <div class="string-wrapper">
-                <div class="string-wrapper__column"
-                  >Замена программного обеспечения</div
-                >
-                <div class="string-wrapper__column">1 000 ₽</div>
-                <div class="string-wrapper__column">30-120 мин</div>
-                <div class="string-wrapper__column string-wrapper__column--button"
-                  ><img
-                    class="button button-to-order"
-                    src="../src/img/button-to-order.svg"
-                    alt="Заказать"
-                /></div>
+              <div class="prices-card__string">
+                Цена <br>
+                1 000 ₽
               </div>
+              <div class="prices-card__string--wrapper">
+                  <div class="prices-card__string">
+                    Срок <br>
+                    30-120 мин
+                  </div>
+                <img
+                  class="button button-to-order--mobile"
+                  src="../src/img/button-to-order.svg"
+                  alt="Заказать"
+                />
+              </div>
+            </div>
+            <div class="prices-card">
+              <div class="prices-card__string">
+                Ремонтные услуги <br>
+                Тестирование с выдачей технического заключения
+              </div>
+              <div class="prices-card__string">
+                Цена <br>
+                1 000 ₽
+              </div>
+              <div class="prices-card__string--wrapper">
+                  <div class="prices-card__string">
+                    Срок <br>
+                    30-120 мин
+                  </div>
+                <img
+                  class="button button-to-order--mobile"
+                  src="../src/img/button-to-order.svg"
+                  alt="Заказать"
+                />
+              </div>
+            </div>
+
+            <div class="prices-card">
+              <div class="prices-card__string">
+                Ремонтные услуги <br>
+                Замена программного обеспечения
+              </div>
+              <div class="prices-card__string">
+                Цена <br>
+                1 000 ₽
+              </div>
+              <div class="prices-card__string--wrapper">
+                  <div class="prices-card__string">
+                    Срок <br>
+                    30-120 мин
+                  </div>
+                <img
+                  class="button button-to-order--mobile"
+                  src="../src/img/button-to-order.svg"
+                  alt="Заказать"
+                />
+              </div>
+            </div>
+
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+
+          <div class="price__list">
+          <div class="string-wrapper string-title">
+            <div class="string-wrapper__column">Ремонтные услуги</div>
+            <div class="string-wrapper__column">Цена</div>
+            <div class="string-wrapper__column">Срок</div>
+          </div>
+          <div class="string-content">
+            <div class="string-wrapper">
+              <div class="string-wrapper__column">Диагностика</div>
+              <div class="string-wrapper__column">Бесплатно</div>
+              <div class="string-wrapper__column">30 мин</div>
+              <div
+                class="string-wrapper__column string-wrapper__column--button"
+              >
+                <img
+                  class="button button-to-order"
+                  src="../src/img/button-to-order.svg"
+                  alt="Заказать"
+                />
+              </div>
+            </div>
+            <div class="string-wrapper">
+              <div class="string-wrapper__column">Замена дисплея</div>
+              <div class="string-wrapper__column">1 000 ₽</div>
+              <div class="string-wrapper__column">30-120 мин</div>
+              <div class="string-wrapper__column string-wrapper__column--button"
+                ><img
+                  class="button button-to-order"
+                  src="../src/img/button-to-order.svg"
+                  alt="Заказать"
+              /></div>
+            </div>
+            <div class="string-wrapper">
+              <div class="string-wrapper__column"
+                >Замена полифонического динамика</div
+              >
+              <div class="string-wrapper__column">1 000 ₽</div>
+              <div class="string-wrapper__column">30-120 мин</div>
+              <div class="string-wrapper__column string-wrapper__column--button"
+                ><img
+                  class="button button-to-order"
+                  src="../src/img/button-to-order.svg"
+                  alt="Заказать"
+              /></div>
+            </div>
+            <div class="string-wrapper">
+              <div class="string-wrapper__column"
+                >Тестирование с выдачей технического заключения</div
+              >
+              <div class="string-wrapper__column">1 000 ₽</div>
+              <div class="string-wrapper__column">30-120 мин</div>
+              <div class="string-wrapper__column string-wrapper__column--button"
+                ><img
+                  class="button button-to-order"
+                  src="../src/img/button-to-order.svg"
+                  alt="Заказать"
+              /></div>
+            </div>
+            <div class="string-wrapper">
+              <div class="string-wrapper__column"
+                >Замена программного обеспечения</div
+              >
+              <div class="string-wrapper__column">1 000 ₽</div>
+              <div class="string-wrapper__column">30-120 мин</div>
+              <div class="string-wrapper__column string-wrapper__column--button"
+                ><img
+                  class="button button-to-order"
+                  src="../src/img/button-to-order.svg"
+                  alt="Заказать"
+              /></div>
             </div>
           </div>
         </div>
-        <div class="swiper-pagination"></div>
         <section class="prices-info">
-          <p class="prices-info__text">Все цены указаны с учетом НДС. Стоимость ремонта указана на единичную услугу. 
-            Для получения коммерческого предложения на постоянное обслуживание, оставьте заявку.</p>
+          <p class="prices-info__text"
+            >Все цены указаны с учетом НДС. Стоимость ремонта указана на
+            единичную услугу. Для получения коммерческого предложения на
+            постоянное обслуживание, оставьте заявку.</p
+          >
           <div class="info--wrapper"></div>
-            <a class="prices-info__link link" rel="stylesheet" href="#">Получить коммерческое предложение</a>
-            <img class="prices-info__img" src="../src/img/line.svg" alt="">
+          <a class="prices-info__link link" rel="stylesheet" href="#"
+            >Получить коммерческое предложение</a
+          >
+          <img class="prices-info__img" src="../src/img/line.svg" alt="" />
         </section>
       </article>
       <footer class="footer">
-        <div class="footer-info">© 2019 CPS
-          <br>
-          Разработано командой Apesong </div>
+        <div class="footer-info"
+          >© 2019 CPS
+          <br />
+          Разработано командой Apesong
+        </div>
         <div class="footer-info">Политика конфиденциальности</div>
-        <div class="footer-info">Информация, размещенная на данной странице, не является публичной офертой</div>
+        <div class="footer-info"
+          >Информация, размещенная на данной странице, не является публичной
+          офертой</div
+        >
       </footer>
     </div>
   </body>
