--- a/src/index.html
+++ b/src/index.html
@@ -709,5 +709,55 @@
         >
       </footer>
     </div>
+    <section class="modal-container modal-feedback modal--hidden">
+    <div class="modal">
+      <button class="button button-close button-close--modal" type="button">
+          <img
+          class="button-close__img"
+          src="../src/img/close.svg"
+          alt="Закрыть"
+        />
+      </button>
+      <h1 class="title__h1 modal-title">Обратная связь</h1>
+      <form class="modal-form">
+        <input class="modal-form__field" type="text" placeholder="Имя">
+        <input class="modal-form__field" type="number" placeholder="Телефон">
+        <input class="modal-form__field" type="email" placeholder="Электронная почта">
+        <textarea class="modal-form__field modal-form__field--xl" name="message" placeholder="Сообщение" ></textarea>
+        <p class="modal-agreement">Нажимая “отправить”, вы даете согласие на <a class="modal-link" href="#">обработку персональных данных</a>
+           и соглашаетесь с нашей <a class="modal-link" href="#">политикой конфиденциальности</a></p>
+        <button class="button button-submit" type="submit">
+            <img
+            class="button-submit__img"
+            src="../src/img/submit.svg"
+            alt="Отправить"
+          />
+      </form>
+    </div>
+    </section>
+    <section class="modal-container modal-feedback modal--hidden">
+    <div class="modal modal-call modal--hidden">
+      <button class="button button-close button-close--modal" type="button">
+          <img
+          class="button-close__img"
+          src="../src/img/close.svg"
+          alt="Закрыть"
+        />
+      </button>
+      <h1 class="title__h1 modal-title">Заказать звонок</h1>
+      <form class="modal-form">
+        <input class="modal-form__field" type="number" placeholder="Телефон">
+        <p class="modal-agreement">Нажимая “отправить”, вы даете согласие на <a class="modal-link" href="#">обработку персональных данных</a>
+           и соглашаетесь с нашей <a class="modal-link" href="#">политикой конфиденциальности</a></p>
+        <button class="button button-submit" type="submit">
+            <img
+            class="button-submit__img"
+            src="../src/img/submit.svg"
+            alt="Отправить"
+          />
+      </form>
+    </div>
+  </section>
+  </div>
   </body>
 </html>
