--- a/src/index.html
+++ b/src/index.html
@@ -711,7 +711,7 @@
     </div>
     <section class="modal-container modal-feedback modal--hidden">
     <div class="modal">
-      <button class="button button-close button-close--modal" type="button">
+      <button class="button button-close button-close--modal button-close--modal-feedback" type="button">
           <img
           class="button-close__img"
           src="../src/img/close.svg"
@@ -735,9 +735,9 @@
       </form>
     </div>
     </section>
-    <section class="modal-container modal-feedback modal--hidden">
-    <div class="modal modal-call modal--hidden">
-      <button class="button button-close button-close--modal" type="button">
+    <section class="modal-container modal-call modal--hidden">
+    <div class="modal">
+      <button class="button button-close button-close--modal button-close--modal-call" type="button">
           <img
           class="button-close__img"
           src="../src/img/close.svg"
