--- a/src/index.html
+++ b/src/index.html
@@ -380,6 +380,7 @@
                 />
               </button>
             </div>
+            
           </div>
           <div class="swiper-pagination"></div>
         </div>
@@ -480,8 +481,10 @@
               </button>
             </div>
           </div>
+
+          <div class="swiper-pagination"></div>
         </div>
-        <div class="swiper-pagination"></div>
+
         <div class="show-all">
           <img
             class="show-all__icon show-all__icon--type"
@@ -496,8 +499,7 @@
         <h2 class="service-prices__title">Цены на услуги</h2>
         <div class="swiper-prices swiper" data-mobile="false">
           <div class="prices-mobile swiper-wrapper">
-
-            <div class="prices-card">
+            <div class="prices-card swiper-slide">
               <div class="prices-card__string">
                 Ремонтные услуги <br>
                 Диагностика
@@ -519,7 +521,7 @@
               </div>
             </div>
 
-            <div class="prices-card">
+            <div class="prices-card swiper-slide">
               <div class="prices-card__string">
                 Ремонтные услуги <br>
                 Замена дисплея
@@ -541,7 +543,7 @@
               </div>
             </div>
 
-            <div class="prices-card">
+            <div class="prices-card swiper-slide">
               <div class="prices-card__string">
                 Ремонтные услуги <br>
                 Замена полифонического динамика
@@ -562,7 +564,7 @@
                 />
               </div>
             </div>
-            <div class="prices-card">
+            <div class="prices-card swiper-slide">
               <div class="prices-card__string">
                 Ремонтные услуги <br>
                 Тестирование с выдачей технического заключения
@@ -584,7 +586,7 @@
               </div>
             </div>
 
-            <div class="prices-card">
+            <div class="prices-card swiper-slide">
               <div class="prices-card__string">
                 Ремонтные услуги <br>
                 Замена программного обеспечения
@@ -607,8 +609,9 @@
             </div>
 
             </div>
+            <div class="swiper-pagination"></div>
           </div>
-          <div class="swiper-pagination"></div>
+
 
           <div class="price__list">
           <div class="string-wrapper string-title">
