--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <header class="header-burger">
           <div class="container-burger__header">
             <button class="button button-close" type="button">
-              <img class="button-close__img" src="../src/img/close.svg" alt="Закрыть">
+              <img class="button-close__img" src="./img/close.svg" alt="Закрыть">
             </button>
             <img class="logo" src="../src/img/logo.svg" alt="Логотип">
           </div>
           <button class="button button-search" type="button">
-            <img class="search__img" src="../src/img/search.svg" alt="Поиск">
+            <img class="search__img" src="./img/search.svg" alt="Поиск">
           </button>
         </header>
         <div class="nav-buger">
@@ -316,7 +316,7 @@
                     Срок <br>
                     30 мин
                   </div>
-                <img class="button button-to-order--mobile" src="../src/img/button-to-order.svg" alt="Заказать">
+                <img class="button button-to-order--mobile" src="./img/button-to-order.svg" alt="Заказать">
               </div>
             </div>
 
@@ -334,7 +334,7 @@
                     Срок <br>
                     30-120 мин
                   </div>
-                <img class="button button-to-order--mobile" src="../src/img/button-to-order.svg" alt="Заказать">
+                <img class="button button-to-order--mobile" src="./img/button-to-order.svg" alt="Заказать">
               </div>
             </div>
 
@@ -352,7 +352,7 @@
                     Срок <br>
                     30-120 мин
                   </div>
-                <img class="button button-to-order--mobile" src="../src/img/button-to-order.svg" alt="Заказать">
+                <img class="button button-to-order--mobile" src="./img/button-to-order.svg" alt="Заказать">
               </div>
             </div>
             <div class="prices-card swiper-slide">
@@ -369,7 +369,7 @@
                     Срок <br>
                     30-120 мин
                   </div>
-                <img class="button button-to-order--mobile" src="../src/img/button-to-order.svg" alt="Заказать">
+                <img class="button button-to-order--mobile" src="./img/button-to-order.svg" alt="Заказать">
               </div>
             </div>
 
@@ -387,7 +387,7 @@
                     Срок <br>
                     30-120 мин
                   </div>
-                <img class="button button-to-order--mobile" src="../src/img/button-to-order.svg" alt="Заказать">
+                <img class="button button-to-order--mobile" src="./img/button-to-order.svg" alt="Заказать">
               </div>
             </div>
 
@@ -408,32 +408,32 @@
               <div class="string-wrapper__column">Бесплатно</div>
               <div class="string-wrapper__column">30 мин</div>
               <div class="string-wrapper__column string-wrapper__column--button">
-                <img class="button button-to-order" src="../src/img/button-to-order.svg" alt="Заказать">
+                <img class="button button-to-order" src="./img/button-to-order.svg" alt="Заказать">
               </div>
             </div>
             <div class="string-wrapper">
               <div class="string-wrapper__column">Замена дисплея</div>
               <div class="string-wrapper__column">1 000 ₽</div>
               <div class="string-wrapper__column">30-120 мин</div>
-              <div class="string-wrapper__column string-wrapper__column--button"><img class="button button-to-order" src="../src/img/button-to-order.svg" alt="Заказать"></div>
+              <div class="string-wrapper__column string-wrapper__column--button"><img class="button button-to-order" src="./img/button-to-order.svg" alt="Заказать"></div>
             </div>
             <div class="string-wrapper">
               <div class="string-wrapper__column">Замена полифонического динамика</div>
               <div class="string-wrapper__column">1 000 ₽</div>
               <div class="string-wrapper__column">30-120 мин</div>
-              <div class="string-wrapper__column string-wrapper__column--button"><img class="button button-to-order" src="../src/img/button-to-order.svg" alt="Заказать"></div>
+              <div class="string-wrapper__column string-wrapper__column--button"><img class="button button-to-order" src="./img/button-to-order.svg" alt="Заказать"></div>
             </div>
             <div class="string-wrapper">
               <div class="string-wrapper__column">Тестирование с выдачей технического заключения</div>
               <div class="string-wrapper__column">1 000 ₽</div>
               <div class="string-wrapper__column">30-120 мин</div>
-              <div class="string-wrapper__column string-wrapper__column--button"><img class="button button-to-order" src="../src/img/button-to-order.svg" alt="Заказать"></div>
+              <div class="string-wrapper__column string-wrapper__column--button"><img class="button button-to-order" src="./img/button-to-order.svg" alt="Заказать"></div>
             </div>
             <div class="string-wrapper">
               <div class="string-wrapper__column">Замена программного обеспечения</div>
               <div class="string-wrapper__column">1 000 ₽</div>
               <div class="string-wrapper__column">30-120 мин</div>
-              <div class="string-wrapper__column string-wrapper__column--button"><img class="button button-to-order" src="../src/img/button-to-order.svg" alt="Заказать"></div>
+              <div class="string-wrapper__column string-wrapper__column--button"><img class="button button-to-order" src="./img/button-to-order.svg" alt="Заказать"></div>
             </div>
           </div>
         </div>
@@ -443,7 +443,7 @@
             постоянное обслуживание, оставьте заявку.</p>
           <div class="info--wrapper"></div>
           <a class="prices-info__link link" rel="stylesheet" href="#">Получить коммерческое предложение</a>
-          <img class="prices-info__img" src="../src/img/line.svg" alt="">
+          <img class="prices-info__img" src="./img/line.svg" alt="">
         </section>
       </article>
       <footer class="footer">
@@ -459,7 +459,7 @@
     <section class="modal-container modal-feedback modal--hidden">
     <div class="modal">
       <button class="button button-close button-close--modal button-close--modal-feedback" type="button">
-          <img class="button-close__img" src="../src/img/close.svg" alt="Закрыть">
+          <img class="button-close__img" src="./img/close.svg" alt="Закрыть">
       </button>
       <h1 class="title__h1 modal-title">Обратная связь</h1>
       <form class="modal-form">
@@ -470,14 +470,14 @@
         <p class="modal-agreement">Нажимая “отправить”, вы даете согласие на <a class="modal-link" href="#">обработку персональных данных</a>
            и соглашаетесь с нашей <a class="modal-link" href="#">политикой конфиденциальности</a></p>
         <button class="button button-submit" type="submit">
-            <img class="button-submit__img" src="../src/img/submit.svg" alt="Отправить">
+            <img class="button-submit__img" src="./img/submit.svg" alt="Отправить">
       </button></form>
     </div>
     </section>
     <section class="modal-container modal-call modal--hidden">
     <div class="modal">
       <button class="button button-close button-close--modal button-close--modal-call" type="button">
-          <img class="button-close__img" src="../src/img/close.svg" alt="Закрыть">
+          <img class="button-close__img" src="./img/close.svg" alt="Закрыть">
       </button>
       <h1 class="title__h1 modal-title">Заказать звонок</h1>
       <form class="modal-form">
@@ -485,7 +485,7 @@
         <p class="modal-agreement">Нажимая “отправить”, вы даете согласие на <a class="modal-link" href="#">обработку персональных данных</a>
            и соглашаетесь с нашей <a class="modal-link" href="#">политикой конфиденциальности</a></p>
         <button class="button button-submit" type="submit">
-            <img class="button-submit__img" src="../src/img/submit.svg" alt="Отправить">
+            <img class="button-submit__img" src="./img/submit.svg" alt="Отправить">
       </button></form>
     </div>
   </section>
