--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <button class="button button-close" type="button">
               <img class="button-close__img" src="./img/close.svg" alt="Закрыть">
             </button>
-            <img class="logo" src="../src/img/logo.svg" alt="Логотип">
+            <img class="logo" src="./img/logo.svg" alt="Логотип">
           </div>
           <button class="button button-search" type="button">
             <img class="search__img" src="./img/search.svg" alt="Поиск">
